--- a/views/404.pug
+++ b/views/404.pug
@@ -13,5 +13,5 @@ html(lang="en")
                     li.main-header__item
                         a(href="/") Shop 
                     li.main-header__item
-                        a.active(href="/admin/add-product") Add Product
+                        a(href="/admin/add-product") Add Product
         h1 Page Not Found
